# file-ops

./: .gitignore  config.example.json  config.py  docker-run-onlyoffice.sh  main.py  manage_config.py  pyproject.toml
static/: editor.html  index.html  preview.html  test-preview.html  test-responsive.html
uploads/: .gitkeep
